#ifndef SSLBEHAVIOR_HH
#define SSLBEHAVIOR_HH

class SSLBehavior {

};

#endif 